apps/datos/vaultwarden-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: "kube-system-redirect-https@cuberdns"
    traefik.ingress.kubernetes.io/router.clientaccepttimeout: "5m"
spec:
  rules:
  - host: vaultwarden.jlc.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vaultwarden-service
            port:
              number: 80
  tls:
  - hosts:
    - vaultwarden.jlc.local
